# cpplattica

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  README.md  basic_controller.cpp  basic_controller.h  constants.h  discrete_grid_setup.cpp  discrete_grid_setup.h  distance_map.cpp  euclidean_distance_map.cpp  game_of_life_controller.cpp  game_of_life_controller.h  helpers.cpp  helpers.h  lattice.cpp  lattice.h  main.cpp  moore_neighborhood_builder.cpp  moore_neighborhood_builder.h  motif_neighborhood_builder.cpp  motif_neighborhood_builder.h  neighborhood.cpp  neighborhood.h  neighborhood_builder.cpp  neighborhood_builder.h  notes.txt  periodic_structure.cpp  periodic_structure.h  phases_set.cpp  phases_set.h  runner.cpp  runner.h  simple_sqaure_2d_structure_builder.cpp  simple_sqaure_2d_structure_builder.h  simulation.cpp  simulation.h  simulation_result.cpp  simulation_result.h  simulation_state.cpp  (+9 more)
pylattica/: cpplattica_serial_times.csv  gol_benchmarking.py  plotting.ipynb  profile_gol.py  sim_result_nprocs_1_rank_0_size_100_nsteps_10.json  sim_result_rank_0_size_100_nsteps_100.json  sim_result_rank_0_size_10_nsteps_10.json  sim_result_rank_0_size_10_nsteps_100.json  sim_structure_nprocs_1_rank_0_size_100_nsteps_10.json  sim_structure_rank_0_size_10_nsteps_10.json  strong_scaling.csv
pylattica/.ipynb_checkpoints/: gol_pylattica_serial-checkpoint.csv  plotting-checkpoint.ipynb  weak_scaling-checkpoint.csv
src/: basic_controller.cpp  basic_controller.h  constants.h  discrete_grid_setup.cpp  discrete_grid_setup.h  distance_map.cpp  distance_map.h  euclidean_distance_map.cpp  euclidean_distance_map.h  game_of_life_controller.cpp  game_of_life_controller.h  helpers.cpp  helpers.h  lattice.cpp  lattice.h  main.cpp  moore_neighborhood_builder.cpp  moore_neighborhood_builder.h  motif_neighborhood_builder.cpp  mpi_gpt_example.cpp  mpi_state_change.h  neighborhood_builder.cpp  periodic_structure.cpp  periodic_structure.h  phases_set.cpp  runner.cpp  runner.h  simple_sqaure_2d_structure_builder.cpp  simple_sqaure_2d_structure_builder.h  simulation_result.cpp  simulation_result.h  simulation_result.json  simulation_state.cpp  simulation_state.h  site.cpp  site.h  structure_builder.cpp  structure_builder.h  synchronous_runner.cpp  synchronous_runner.h
